--- a/copier.yml
+++ b/copier.yml
@@ -19,6 +19,10 @@ _skip_if_exists:
   - ".env"
   - "backend/**/*.py"
 
+_exclude:
+  # Conditionally exclude pre-commit config if using detect-secrets
+  - "{% if git_hook_tool != 'pre-commit' %}.pre-commit-config.yaml.jinja{% endif %}"
+
 # ============================================================================
 # PROJECT IDENTITY
 # ============================================================================
@@ -140,6 +144,55 @@ git_hook_tool:
   when: "{{ use_git_hooks }}"
 
 # ============================================================================
+# AZURE DEPLOYMENT CONFIGURATION
+# ============================================================================
+
+use_azure_deployment:
+  type: bool
+  help: |
+    Generate Azure (AKS) deployment infrastructure with Bicep?
+    Includes ACR, AKS cluster, Key Vault, and Kubernetes manifests.
+  default: true
+
+azure_region:
+  type: str
+  help: Azure region for deployment
+  default: "eastus"
+  when: "{{ use_azure_deployment }}"
+
+azure_environment:
+  type: str
+  help: Environment name for Azure resources
+  choices:
+    - dev
+    - staging
+    - prod
+  default: dev
+  when: "{{ use_azure_deployment }}"
+
+azure_resource_group:
+  type: str
+  help: Azure resource group name
+  default: "rg-{{ package_name }}-{{ azure_environment }}"
+  when: "{{ use_azure_deployment }}"
+
+azure_container_registry_name:
+  type: str
+  help: |
+    Container registry name (alphanumeric only, globally unique)
+    Will be suffixed with .azurecr.io
+  default: "{{ package_name | replace('_', '') }}{{ azure_environment }}acr"
+  when: "{{ use_azure_deployment }}"
+
+backend_cors_origins:
+  type: str
+  help: |
+    Backend CORS origins (comma-separated)
+    Domains allowed to access the API
+  default: "http://localhost:3000,http://localhost:5173"
+  when: "{{ use_azure_deployment }}"
+
+# ============================================================================
 # POST-GENERATION TASKS
 # ============================================================================
 
@@ -158,7 +211,7 @@ _tasks:
   - command: |
       {% if git_hook_tool == 'detect-secrets' %}
       uv tool install detect-secrets || pip install detect-secrets
-      detect-secrets scan --baseline .secrets.baseline
+      detect-secrets scan > .secrets.baseline || true
       {% else %}
       uv tool install pre-commit || pip install pre-commit
       pre-commit install
