fix: rename env.example to .env.example.jinja for proper template processing
- Rename template/env.example to template/.env.example.jinja
- Update copier.yml to reference .env.example
- Ensures Jinja2 variables are processed correctly in env file
- Fixes docker-compose failing with raw Jinja2 syntax in .env

--- a/copier.yml
+++ b/copier.yml
@@ -180,8 +180,8 @@ _tasks:
       {% endif %}
     when: "{{ use_git_hooks }}"
 
-  # Create .env from env.example
-  - command: '[ ! -f .env ] && cp env.example .env || true'
+  # Create .env from .env.example
+  - command: '[ ! -f .env ] && cp .env.example .env || true'
     when: true
 
   # Initial git commit
